log
Sun, May 18, 2025 12:06:16 AM: 
 sudoku.c | 104 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 102 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:156:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Sun, May 18, 2025 12:08:32 AM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:156:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
5a85d54
Sun, May 18, 2025 12:09:42 AM: 
 sudoku.c | 72 +++++++++++++++++++++-------------------------------------------
 1 file changed, 23 insertions(+), 49 deletions(-)
 tests:  6|2
total_score: 45/70
209c2f9
